# wrapp

./: LICENSE  README.md  pyproject.toml
samples/: template.py
samples/sub/: template2.py
src/wrapp/: __init__.py  __main__.py  wrapp.py
tests/: invalid.py  template.py  test_wrapp.py
tests/sub/: template2.py
