[tool.poetry]
name = "wrapp"
version = "0.1.0"
description = "Making a CLI Application by wrapping"
authors = ["Taro W <19923207+t-aro-w@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pycodestyle = "^2.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
wrapp = 'wrapp.wrapp:main'
'wrapp.new' = 'wrapp.wrapp:new'
